Sender gyldige perioder for revurdering som liste og ikke map